# Intrastek

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yaml
backend/: Cargo.toml  Dockerfile  README.md  build.rs
backend/prisma/: schema.prisma
backend/prisma-cli/: Cargo.toml
backend/src/: activity.rs  interval.rs  main.rs  planner.rs  state.rs
backend/src/astek/: indisponibility.rs  mod.rs  timetable.rs
backend/src/helpers/: mod.rs  request.rs  response.rs
backend/src/middlewares/: activity.rs  astek.rs  auth.rs  mod.rs  permissions.rs
backend/src/middlewares/astek/: indisponibility.rs  mod.rs
backend/src/routes/: activities.rs  asteks.rs  login.rs  mod.rs
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/src/: authConfig.ts  theme.ts
frontend/src/api/: activity.ts  asteks.ts  request.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/activity/: [id].js  page.tsx
frontend/src/app/api/: asteks.ts
frontend/src/app/msal/: MsGraphApiCall.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/user/: page.tsx
frontend/src/components/: bar.tsx  button.tsx  login.tsx  muiWrapper.tsx  page.tsx  profile.tsx  themeSwitch.tsx
frontend/src/types/: activity.ts  astek.ts  interval.ts  profile.ts
src/: activity.rs  astek.rs  interval.rs  main.rs  module.rs  planner.rs
src/activities/: follow_up.rs  mod.rs
src/astek/: astek.rs  indisponibility.rs  mod.rs  timetable.rs
src/helpers/: mod.rs  response.rs
src/middlewares/: astek.rs  mod.rs
src/routes/: activities.rs  asteks.rs  mod.rs
(+12 files in other folders)
