[package]
name = "IntrastekApi"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.3"
log = "0.4.22"
rocket = { version = "0.5.1", features = ["json", "uuid"] }
rocket_cors = "0.6.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.119"
uuid = { version = "1.9.1", features = ["serde", "v4"] }
reqwest = { version = "0.12.5", features = ["json"] }
jsonwebtoken = "9.3.0"
tokio = "1.0"

[dependencies.prisma-client-rust]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.11"
default-features = false
features = ["mysql"]
